add public routes
